[project]
name = "nsfw-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.11.0",
    "onnxruntime>=1.24.4",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
quantize = [
    "onnx>=1.17.0",
]
